components/service-mesh/envoy/envoy-dynamic-deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: envoy
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy-dynamic
  namespace: envoy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: envoy
  template:
    metadata:
      labels:
        app: envoy
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      containers:
        - name: envoy
          image: envoyproxy/envoy:debug-v1.31-latest
          ports:
            - name: envoy
              containerPort: 9000
            - name: envoy-admin
              containerPort: 9901
          volumeMounts:
            - name: envoy-config
              mountPath: /etc/envoy

      volumes:
        - name: envoy-config
          configMap:
            name: envoy-dynamic

---
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-dynamic
  namespace: envoy
data:
  envoy.yaml: |
    node:
      cluster: test-cluster
      id: test-id
    dynamic_resources:
      lds_config:
        path_config_source:
          path: "/etc/envoy/lds.yaml"
      cds_config:
        path_config_source:
          path: "/etc/envoy/cds.yaml"
    admin:
      access_log_path: "/dev/null"
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 9091
  lds.yaml: |
    version_info: "0"
    resources:
      - "@type": type.googleapis.com/envoy.config.listener.v3.Listener
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 8080
        filter_chains:
          - filters:
              - name: envoy.filters.network.http_connection_manager
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                  access_log:
                    - name: envoy.access_loggers.file
                      typed_config:
                        "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                        path: "/dev/stdout"
                  stat_prefix: ingress_http
                  codec_type: AUTO
                  route_config:
                    name: local_route
                    virtual_hosts:
                      - name: local_service
                        domains:
                          - "*"
                        routes:
                          - match:
                              prefix: "/app"
                            route:
                              cluster: example_proxy_cluster
                              prefix_rewrite: "/"
                  http_filters:
                    - name: envoy.filters.http.router
                      typed_config:
                        "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  cds.yaml: |
    version_info: "0"
    resources:
      - "@type": type.googleapis.com/envoy.config.cluster.v3.Cluster
        name: example_proxy_cluster
        connect_timeout: 0.25s
        lb_policy: ROUND_ROBIN
        type: EDS
        eds_cluster_config:
          # service_name: localservices
          eds_config:
            path_config_source:
              path: "/etc/envoy/eds.yaml"
  eds.yaml: |
    version_info: "0"
    resources:
    - "@type": type.googleapis.com/envoy.config.endpoint.v3.ClusterLoadAssignment
      cluster_name: example_proxy_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 10.255.81.114
                port_value: 81
