components/service-mesh/envoy/envoy-static-deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: envoy
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy-static
  namespace: envoy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: envoy
  template:
    metadata:
      labels:
        app: envoy
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      containers:
        - name: envoy
          image: harbor-k8s.xsyxsc.cn/envoyproxy/envoy:debug-v1.31-latest
          ports:
            - name: envoy
              containerPort: 9000
            - name: envoy-admin
              containerPort: 9901
          volumeMounts:
            - name: envoy-config
              mountPath: /etc/envoy
      volumes:
        - name: envoy-config
          configMap:
            name: envoy-static
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-static
  namespace: envoy
data:
  envoy.yaml: |
    static_resources:
      listeners:
        - address:
            socket_address:
              address: 0.0.0.0
              port_value: 9000
          filter_chains:
            - filters:
                - name: envoy.filters.network.http_connection_manager
                  typed_config: 
                    "@type" : type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                    stat_prefix: http_proxy
                    route_config:
                      name: all
                      virtual_hosts:
                        - name: all_backend_cluster
                          domains:
                            - '*'
                          routes:
                            - match: { prefix: "/app1" }
                              route:
                                cluster: app1_backend_cluster
                                prefix_rewrite: "/"
                            - match: { prefix: "/app2" }
                              route:
                                cluster: app2_backend_cluster
                                prefix_rewrite: "/"
                            - match: { prefix: "/" }
                              route:
                                cluster: all_backend_cluster
                                prefix_rewrite: "/"
                    access_log:
                      - name: envoy.access_loggers.stdout
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                    http_filters:
                      - name: envoy.filters.http.router
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      clusters:
        - name: all_backend_cluster
          connect_timeout: 1s
          type: strict_dns
          dns_lookup_family: V4_ONLY
          lb_policy: ROUND_ROBIN
          load_assignment:
            cluster_name: all_backend_cluster
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: nginx-app-service-1.example.svc.cluster.local
                          port_value: 81
                  - endpoint:
                      address:
                        socket_address:
                          address: nginx-app-service-2.example.svc.cluster.local
                          port_value: 82
        - name: app1_backend_cluster
          connect_timeout: 1s
          type: strict_dns
          lb_policy: ROUND_ROBIN
          load_assignment:
            cluster_name: app1_backend_cluster
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: nginx-app-service-1.example.svc.cluster.local
                          port_value: 81
        - name: app2_backend_cluster
          connect_timeout: 1s
          type: strict_dns
          lb_policy: ROUND_ROBIN
          load_assignment:
            cluster_name: app2_backend_cluster
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: nginx-app-service-2.example.svc.cluster.local
                          port_value: 82
    admin:
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 9901

---
apiVersion: v1
kind: Namespace
metadata:
  name: example
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: nginx-app-config-1
  namespace: example
data:
  index.html: |
    App-1: Hello, I'm Ankit Kumar!
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app-deployment-1
  namespace: example
spec:
  # replicas: 2
  selector:
    matchLabels:
      app: nginx-app-pod-label-1
  template:
    metadata:
      labels:
        app: nginx-app-pod-label-1
    spec:
      containers:
        - name: nginx-app-container-1
          image: nginx:latest
          ports:
            - containerPort: 80
          lifecycle:
            preStop:
              exec:
                command: ["/usr/sbin/nginx", "-s", "quit"]
          volumeMounts:
            - name: nginx-webpage-volume-1
              mountPath: /usr/share/nginx/html
          resources:
            requests:
              memory: "150Mi"
              cpu: "250m"
            limits:
              memory: "250Mi"
              cpu: "500m"
      volumes:
        - name: nginx-webpage-volume-1
          configMap:
            name: nginx-app-config-1
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-app-service-1
  namespace: example
spec:
  selector:
    app: nginx-app-pod-label-1
  ports:
    - protocol: TCP
      port: 81
      targetPort: 80
  type: ClusterIP

---
apiVersion: v1
kind: Namespace
metadata:
  name: example
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: nginx-app-config-2
  namespace: example
data:
  index.html: |
    App-2: Hello, what's your good name?
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app-deployment-2
  namespace: example
spec:
  # replicas: 3
  selector:
    matchLabels:
      app: nginx-app-pod-label-2
  template:
    metadata:
      labels:
        app: nginx-app-pod-label-2
    spec:
      containers:
        - name: nginx-app-container-2
          image: nginx:latest
          ports:
            - containerPort: 80
          lifecycle:
            preStop:
              exec:
                command: ["/usr/sbin/nginx", "-s", "quit"]
          volumeMounts:
            - name: nginx-webpage-volume-2
              mountPath: /usr/share/nginx/html
          resources:
            requests:
              memory: "150Mi"
              cpu: "250m"
            limits:
              memory: "250Mi"
              cpu: "500m"
      volumes:
        - name: nginx-webpage-volume-2
          configMap:
            name: nginx-app-config-2
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-app-service-2
  namespace: example
spec:
  selector:
    app: nginx-app-pod-label-2
  ports:
    - protocol: TCP
      port: 82
      targetPort: 80
  type: ClusterIP
